5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4368/executions/1596_2894.log
== TEST (2019-04-02 00:13:23) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var=foat(input("45*8"))

# Calculo do valor a ser pago, incluindo o frete:
total=360

# Impressao do valor total:
print(var)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    var=foat(input())
NameError: name 'foat' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 00:15:11) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var=foat(input("45"))

# Calculo do valor a ser pago, incluindo o frete:
total=45

# Impressao do valor total:
print(var)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    var=foat(input())
NameError: name 'foat' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 09:35:43) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var=foat(input("45"))

# Calculo do valor a ser pago, incluindo o frete:
total=45

# Impressao do valor total:
print(var)
-- EXECUTION TIME:
0.143796
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/2894/main.py", line 5, in <module>
    var=foat(input())
NameError: name 'foat' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 09:37:42) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var=foat(input("45"))

# Calculo do valor a ser pago, incluindo o frete:
total=45

# Impressao do valor total:
print(var)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    var=foat(input())
NameError: name 'foat' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 09:40:51) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var=foat(input(45))
# Calculo do valor a ser pago, incluindo o frete:
total=45

# Impressao do valor total:
print(var)
-- EXECUTION TIME:
0.136848
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/2894/main.py", line 5, in <module>
    var=foat(input(45))
NameError: name 'foat' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 09:42:09) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var=foat(input(45%8,2))
# Calculo do valor a ser pago, incluindo o frete:
total=5,62

# Impressao do valor total:
print(var)
-- EXECUTION TIME:
0.143011
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/2894/main.py", line 5, in <module>
    var=foat(input(45%8,2))
NameError: name 'foat' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
